# pymatgen-io-validation

./: .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: linting.yml  python-publish.yml  release.py  testing.yml
examples/: MP_compliant_job.py  using_validation_docs.ipynb
pymatgen/io/validation/: __init__.py  check_common_errors.py  check_for_excess_empty_space.py  check_incar.py  check_kpoints_kspacing.py  check_package_versions.py  check_potcar.py  common.py  compare_to_MP_ehull.py  emmet_validation.py  settings.py  validation.py  vasp_defaults.py  vasp_defaults.yaml
tests/: conftest.py  test_validation.py  test_validation_without_potcar.py
tests/test_files/vasp/: scf_incar_check_list.yaml  temp.yaml  test_GGA_NSCF_calc.json
